--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@notionhq/client": "^2.2.15",
     "@types/express": "^5.0.0",
     "dotenv": "^16.4.7",
