--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "googleapis": "^144.0.0"
+    "googleapis": "^144.0.0",
+    "node-cron": "^3.0.3"
   }
 }
